// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SegmentedControl /> Default story renders snapshot 1`] = `
<div
  class="MuiToggleButtonGroup-root css-g1e6pw-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="List A"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconListSmall.svg"
          data-jest-svg-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="List B"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconListSmall.svg"
          data-jest-svg-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
  <button
    aria-label="List C"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="List C"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconListSmall.svg"
          data-jest-svg-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
  <button
    aria-label="List D"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="List D"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconListSmall.svg"
          data-jest-svg-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
</div>
`;

exports[`<SegmentedControl /> Test story renders snapshot 1`] = `
<div
  class="MuiToggleButtonGroup-root css-g1e6pw-MuiToggleButtonGroup-root"
  data-testid="segmentedControl"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="List A"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconListSmall.svg"
          data-jest-svg-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="List B"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconListSmall.svg"
          data-jest-svg-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
  <button
    aria-label="Table"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="Table"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconTableSmall.svg"
          data-jest-svg-name="IconTableSmall"
          data-testid="IconTableSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
  <button
    aria-label="People"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="People"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v0nv1u-MuiSvgIcon-root-iconSize-buttonStyle-StyledSvgIcon"
          data-jest-file-name="IconPeopleSmall.svg"
          data-jest-svg-name="IconPeopleSmall"
          data-testid="IconPeopleSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
  </button>
</div>
`;
